# zenvia-integration

./: .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt
.chalice/: config.json
.chalice/deployed/: develop.json
chalicelib/: auth.py  interfaces.py
chalicelib/whatsapp/: messages.py
